# ChangeLog for app-emulation/xen-tools
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-tools/ChangeLog,v 1.264 2014/10/15 05:46:30 dlan Exp $

  15 Oct 2014; Yixun Lan <dlan@gentoo.org> metadata.xml:
  drop USE xend

  15 Oct 2014; Yixun Lan <dlan@gentoo.org> -xen-tools-4.2.4-r6.ebuild,
  -xen-tools-4.2.4-r7.ebuild, -xen-tools-4.2.5.ebuild,
  -xen-tools-4.3.2-r5.ebuild, -xen-tools-4.3.2-r6.ebuild,
  -xen-tools-4.3.3.ebuild,
  -files/*.patch,
  clean old version, also patches move to devspace

  14 Oct 2014; Agostino Sarubbo <ago@gentoo.org> xen-tools-4.2.5-r1.ebuild:
  Stable for x86, wrt bug #524200

  14 Oct 2014; Agostino Sarubbo <ago@gentoo.org> xen-tools-4.2.5-r1.ebuild,
  xen-tools-4.3.3-r1.ebuild:
  Stable for amd64, wrt bug #524200

*xen-tools-4.4.1-r1 (10 Oct 2014)
*xen-tools-4.3.3-r1 (10 Oct 2014)
*xen-tools-4.2.5-r1 (10 Oct 2014)

  10 Oct 2014; Yixun Lan <dlan@gentoo.org> +xen-tools-4.2.5-r1.ebuild,
  +xen-tools-4.3.3-r1.ebuild, +xen-tools-4.4.1-r1.ebuild:
  version bump, fix bug 522642, 494604

  07 Oct 2014; Ian Delaney <idella4@gentoo.org> xen-tools-4.3.2-r5.ebuild,
  xen-tools-4.3.2-r6.ebuild, xen-tools-4.3.3.ebuild, xen-tools-4.4.1.ebuild:
  correction to dep dev-python/markdown in all versions

  12 Sep 2014; Yixun Lan <dlan@gentoo.org> -files/xen-tools-4.2-pod-docs.patch,
  -files/xen-tools-4.2-pod-utf8-chars.patch, -files/xen-tools-4.2-pod-xl.patch,
  -files/xend.initd-r1:
  drop patches/no-need file since move to devspace

  12 Sep 2014; Yixun Lan <dlan@gentoo.org> xen-tools-4.2.5.ebuild,
  xen-tools-4.3.3.ebuild, -xen-tools-4.4.0-r9.ebuild, xen-tools-4.4.1.ebuild,
  +files/gentoo-patches.conf:
  shrink patches, move to devspace; drop USE=xend for 4.2.5 4.3.3

*xen-tools-4.4.1 (11 Sep 2014)
*xen-tools-4.3.3 (11 Sep 2014)
*xen-tools-4.2.5 (11 Sep 2014)

  11 Sep 2014; Yixun Lan <dlan@gentoo.org> +xen-tools-4.2.5.ebuild,
  +xen-tools-4.3.3.ebuild, +xen-tools-4.4.1.ebuild,