@@ -1,7 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX gentoo-patches.conf 2541 SHA256 8f60398bf6e7fdddf7a039928574e72f00f95428afa90fa69601e7673109f37a SHA512 224c6f4a4e7901261ecb2a10cbcc6b3d7d4c009c1ddbb91ac6d3600ee3c643747822c785246aea56220823b46c6c2b79cdbc91fc65aa6556df6d18add8b96617 WHIRLPOOL 78cbd30af355333f2fa30a401a124ded84d00463f27a0734bbfb3f6f5659097c1ab88c6a527983f1cfe90a3bed0d66bc1a1bb55caf11ac622af7ca0839bdad04
+AUX gentoo-patches.conf 2788 SHA256 ab7e94f1daa9bb01a7d117d3d5b63ab2f634fcc50124cf0bceb20801391b31d0 SHA512 608e2f64b5022fd6b0e8580afe2eb9398e37543a182d87af9cab2c10c8412fee4c5aee0236e0e560ffaa87f6f955dcc972e16b6df73b63f1d91d07d06084e5a2 WHIRLPOOL 24c19c0b03b51dd4bcd1693375ce439fa2586a50bee2ba5c04688fb231d1ea398c4eed49511ff5eb9fdd2d53e77838f4b420376d7c58203cab96eb4b1d5c75cf
 AUX stubs-32.h 537 SHA256 4c903162da80cefd394404cb8cd9963a6ef6e3ad6c7adcbaa450a002d929bfc5 SHA512 55308dbedaa91909a2213940f7a7b574cabe6b5a3104761a2a6f28d6aed00164544488c00cbf9d66a9a370a14c6b6d3a00434efd3ff0228cc8e4d81af19c0e68 WHIRLPOOL 9c006e266bea6bb9d623e76011a4eac07c5fe4fdf76a041cc42a2289a7e9163988bad0fb2f458e300e45aabf9fb864ec764a496d7f89d58e57a506bac206a5f1
 AUX xen-consoles.logrotate 63 SHA256 0da87a4b9094f934e3de937e8ef8d3afc752e76793aa3d730182d0241e118b19 SHA512 ab2105c75cfe01768aecd5bcbb56269d63666e8a44e42b6a83aee87df6c84ee2f9ab249171c21b2e09f8fec2cae8318f6e87d160989398a3e7dd68db8d52c426 WHIRLPOOL be108bf298202851de434af513ac8c03a533e7621623c2a7e8f26d498074b3eec81b85b2ae29ad2ec67f4fe9937c88bd78c5f5e260793e7e69ec964d4adb989e
 AUX xencommons.confd 109 SHA256 e19b950b1bb4103f9006a0c2648a8d4bc890e2c67417de2700b82fb456802640 SHA512 f0bbc9647cecc6cf806e3059960fbe39b23304d9ca0955fb261e1d320b9b9ce59e5b28cc4b5a9922295b31221f0cd8f0cccb405520e097a7b12dc6ddb3294c17 WHIRLPOOL a8b7df6f9a8515b9c3c845379a3aa4424490972d5f882e8779a30fd2d44b77cb66deaa5c1496125ea7bc82e06044a485e14e904ad5c9c79222c008fb6ccc4e74
@@ -25,26 +25,27 @@ DIST xen-4.3.3.tar.gz 16479922 SHA256 59eb0e1c4a1f66965fe56dcf27cdb5872bf7e0585b
 DIST xen-4.4.1-upstream-patches-1.tar.xz 12472 SHA256 96bdb8696bca1de9b7b7963dbfe6d60cfb9db2751a5aa89a1abd57c48faa811d SHA512 a8c3a8c013571eebd12b8a633c3a4988d32579af693951883c8d81030d9bde0368cd8b8420c11f76c46f004c8651e94c2554959675632bf7db50b75bdbfc4fb6 WHIRLPOOL 7b3839c09481511e5482042510b5440496fb3096d965ed1c74aaf2288ad16d805fc0327933de3e56918e9e92f251d180ea4913b4a59be270530f4ec54acb5f02
 DIST xen-4.4.1.tar.gz 18134427 SHA256 55b49d3c4575d7791275125ff87c0f86f1d1e0f7f2718b6fd1c4f88a9bc7ea25 SHA512 bcd577014f4e8cb37b934f17a4dfb6f12e72e865a9e553cc435fdbe6665c733a4d20a812bf126727eca0946188a6abbd9419579757d7e03a38059f3656371c1c WHIRLPOOL f29eab626729f36de3f2e2c6c8446da4a05085818e18c28f07fe364065e05f0af67602eeb988091df3027a844ad0ccd52b6a0ee86592c7ff6008f961b9bd4bcf
 DIST xen-gentoo-patches-0.tar.xz 22240 SHA256 cfe809b2ca278a4ad6771a59ea5bf4848423e5eb5c72c2f3092163c772774e3c SHA512 05c3416859e24b6704e4cf3442fe20411e78a63689d20f97dfd228a15a7e5bb6cf0c4310278ef6cb15a37bc5e07933137ffa17ccb0a8b7096fc45f3a1c16ba90 WHIRLPOOL ea1c3a4679368bcc37f4638400e91f773126a43f6c180084cb8c8f737d9bdae476d67e310453ac3b10e3fe71a0e2c760906ad707234ee6933c0963d6f3c7f061
-EBUILD xen-tools-4.2.5-r1.ebuild 10706 SHA256 8101cc7f26c0cdc58c5bf09c25faa788ad41c3a1b23ddf5c4afeb5e6c4600b66 SHA512 a84e6b7c2307eddad126e42590d0a51d9315f24dd7064f71eea6d2b369ddf866e7731a277649f751c5376ad22551ef237b9d50bc5bf546c0e038ad6fc2e94484 WHIRLPOOL 8c69da6144e168352878e8355bc840f8aa375dec03a2b86ccc89dfbdca03bca3dd6781eeb2ccbd2d71c47f2c7fa2392a1c6aabf88f1fa046c1e345eea6686b36
-EBUILD xen-tools-4.3.3-r1.ebuild 12097 SHA256 8d0675776f38dd9c587784d808ba1e4f4f0901ebd400de948bf20428a8b9066c SHA512 74a4d1cbb5c6b401d3991280aa2833ed4eb8e1332c46c44e89666a4360e6e908e7f13bcf8352d2cd4c6f36d268b3094fbb100fdb6026d16c98991e8f3c7bf57c WHIRLPOOL f1c39e4c1404c255f66e31353851b50c39854925541f6a011b2140ab79806fd10132862c638355a9fd0f52f540eaf875e1bf168e1e45a924841971d83dd642d0
+DIST xen-gentoo-patches-1.tar.xz 23044 SHA256 dcff35bbc4b6946473c9b55ad595a5fea88e8dac1bd977cbe18a644b2cced2e0 SHA512 a4c66382d44112e7be09711e3ecf0f8ebd9a30b29e04d8aca536430172bdd111ab8bab7700433e0dc35165f876eb7e9cd2e554d74ce2a166fb2dfd4de482cb7a WHIRLPOOL d0443e1501ac813ac3226df32a6b050c03302c3d74e3b3bd1293ab4ad929b5c314cc0eac13505ce8a826ee357117e8eeaf0713fd8b9c55f40296966fda082c2e
+EBUILD xen-tools-4.2.5-r1.ebuild 10705 SHA256 464b696bfa55e962dcb87526ad26b5fe2872bac16bd2f2d654524aa3421c17ce SHA512 e5a0bc2ad064210ae025ad0738c67d35fa4f2ec0d1e83ae322d433a2d49adff55aa44e5007587cce0b8f5c440b4d008ad66a0016a4794affa448d9c257650969 WHIRLPOOL 05e3b7e28c121bd7f7a902d4b120b4e4ebd213d952a5805b0b97f497236d3ecc7ca247049c14d39b55d473b06cc62739b758bd137ee6a9d10f07c36b3b97c793
+EBUILD xen-tools-4.3.3-r1.ebuild 12096 SHA256 5149ca998ad89f3c21fb3a39b0052ea9688b8a4dae91669319bf5d4c7f4fe5b2 SHA512 d237bac39cd7c0644bab195b84640065164b46e6de2f90366e6d60a215ea878ddce2df00f55a3cab11091f5cc056cae98d9fb21231f0d3d9419236957d9f42b7 WHIRLPOOL b1d15bc0933167c2da55b13bd75ac1f20e0c37d145a52bd8989e596f7ba6607f609e10183fe35712232a644b01ad07caf25a58bf07058c786bd428d76989e3a4
 EBUILD xen-tools-4.4.1-r1.ebuild 12573 SHA256 cffbf81dc3eeb0fd2cea0f7dd7785b1aa4d8b0b8446c41e1967c597013f80f19 SHA512 bf1ddd769fd3a4f0e9288305d3d00801d5cb7f9ee0a2c4f4e0fa5491455185d1ebfda5bdd652a7dde497f7d4b76da71d095e16cf08bf9e475a1c2e81029464d9 WHIRLPOOL 76c5341f962b8741973461d5865e9221b834a93de4504c45fca9e16d34818633a5a306eb4f47142f0c1c111fce96eefd243a3befe033b4f233f402870a0139bf
-EBUILD xen-tools-4.4.1.ebuild 12505 SHA256 d307530fb95486c948f298e54500e1cb738e42aaf98054037855f1bc343a58f5 SHA512 79589738ba5c66845595076d91e45dc215c4464afca091024689617ed969ae9fff5707a130f19c26285510c5112d9dd4b9ba04ee39d7c8963579eeb7e5e41da4 WHIRLPOOL f4d883a6e2ac1d4ac92279d7b7743a2d0edae83c66eae1a6248bba5c480baa8ba4e49be0906113386c432b82e748f29f1ae6af89496212832feac334b38c547e
-MISC ChangeLog 62176 SHA256 cfd1ebc88f132909835780f57d49a7c4565384118d92ed33c14666871e44abe9 SHA512 64df0f5271b352bca499b2af1d4fa63793fc0e4dd2d4fd0be109631c6730560d05300e3bdfe89d4499bfc069c8fdd02ef9b33c6846aad822627fd6847eac9439 WHIRLPOOL e43502759f6eb1d6cb699fa1c9e1efb081bd9bee3c28ec713fd0504236435831e9cdcb95f41823be61844ebc43d7ae8434832f56f687b975964d832220bee7bb
+EBUILD xen-tools-4.4.1-r2.ebuild 12503 SHA256 1948afa7364e3f2a6e574dab65420040af32fc440bb63eb1e6d4607725f9fbc2 SHA512 6ed1febffb2ef2928a912aeb55ebd8dddfb1a23f8fa792f63ef6aa710854b4691a2081d3d41f953429e80ab6e7242da6e75270dd31260c2a67394b48930caa36 WHIRLPOOL 2bba682ba6a29ec4703a65ee37e6daddc2b15379e646797496b72510baf569758714550053f97e77774b0011080fdc73eaa838027d861c6b5d5d15dd311229f1
+MISC ChangeLog 62476 SHA256 595b6eb85c7587a524581f6a696f2377706c785c4d6e1e6dd3813768604b4f9b SHA512 1a2d0b4e1c7e5a2819c783b27b5db23feebe5a24103fb4933c43aa2f58a0cd475b9e0e9b76709db7a37cb68229e723071953fcf9a56e980579ec8392a85cff65 WHIRLPOOL e791edd39e418f71a299d5b398689be20b5b11cc43ce9a492ee84a04ddda4cb9df9638f98d7a25fedbf1f3b125eedcdc818462becc87c815d91095de18435fc1
 MISC metadata.xml 937 SHA256 5fd444332fbc21fbfef4fede0ecfceef6f0e15d5d655f6e1e1e91c13bc687e93 SHA512 6108c8d85a7dbfe609ff8f5bf063baaf7bdcad7e50c3aa0449ec898ca3d09058f17043a284699cc51b8afb3a23efa303b1f9880196fd5285b62a1c8b4606b126 WHIRLPOOL d63a0582ec36468bf5ef81d0a39fdbc464796cc0cb2a7a87d482bf248043be0d070588e5600147fb50101295fa8e743235317fe6c0c0df916309604b93b67921
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUPgpJAAoJEJIMDbyqvv1VZjcQAOvODSl9SEsrwRDKVljxZ1AE
-NYUACMsCad97C8aNfz2IWmkh2urqLrV+FmIAkqkQYMrvLCmykjZqyhC2TaEw/mjf
-Dcun/WIUapJ1cKTpO5kap8N5KSnomFdhoE7C7CVKIMvFk35nMHrLlj3NTOV7j2Fd
-Vsi2gIHyKoZb7hKimX2cKCDbm8a09UjpiBcrbMUjpo2SDY+/T5ztbYAaEd3LQXYS
-LWKWlulk8tedWL1VMLnF+Ito4dbMw8heyOfA9fQLfR8yhyZZ2jJWpGCsDMkEiSer
-arEut5fy5OwxAJUOp1/08dZzvkx+7+sTZLDJl3NS9gdGWr73a9iZv9Di5GIh36kb
-OJ77f++SXN3MnogNg8mSvOmudR7Py1yDQ+JNk3E9gLYBC8iOR8yn+ItE5SDSPjru
-63D20Io8fWqQdoHdKkOu2FoBM+fxN+DigwcGnxxwvOgerYh0NiF60YKKtAWSlVet
-bykT2WGXpU1/NFuKcYB0Wh2554PKq2FM3Es2GYHwgSU0GR2w2sOCj2ETcJqIUACr
-kYLqS5H6CeJY77ZUd0ku+Zj7vb0icdNL3TrRz8AmG9eK2DEwciNFRPSCUFhai38s
-xvB4mC/wPyVNV8xuwRF5gZUD60KCdFCklkRIQkqzv8vClFg/LTdDER+TjUjhXTt3
-Byx5NQ2SK56+1nHksesw
-=Erhq
+iQIcBAEBCAAGBQJUVPQxAAoJEJIMDbyqvv1V9esP/3SkgYR0QCLmF5dD1lHUWx/O
+TKXiXjztXr75rhx292cCwmoKt19gOKhZJZcdmTLA81fs0Rk8tfK6LAwJNFMClBi0
+TaGed7F7fOQUgULRKoBYZwzydg3+ULQ/SXJDfQlizxqIM47efjbrGPpsTjlbwH+7
+ue0cgn4YuTi2P/DlK6B4hdEhJjqkS2BDEDdXjVDMlYFi5V+RuPD2ZF6tuneY4Sh8
+tjLd9Ogx51ToM5DlzQPt1w1NVuMt3d5EJ5qRLdtJABdoCsM70wA7lewv13D3sTGX
+UPsP0HlJqBuj24Zh7GDwPBSyMRAdecRo7283ci+WBe3J4BT5c6JbZfV4TnvsYZzQ
+NrrIFe7C8vZtXYJaAKUJuzWwx4gJXMfZl7YndikJMY4EuZkUb7SCLhNYVuTVH5od
+Seq3VvOhUFeiJL5/A+aaQbnDWeQ8fgtHqQOMADmhUIJViJDqC6flyv90k5InLgXD
+zOYgTPxJWeZjilgbZNZyFlVAQx49D2vt2io8D+yxWxm/wcgD8mR9RXqP/iPr8m5j
+50B82f0zABhgVSxzCcnNicyPOXj6bD4JaBvHm0wf+MEYE9IvCuxKrF+3pwmaTdZP
+aOg7VTnU2SNeBzXRBwKg0Pc+KNp+nO5azylj/8mOyF8odLoBKdivIaHnY2aKrP4L
+Kxw2R3wqW4HKA8D1IVAE
+=gZ6w
 -----END PGP SIGNATURE-----
