@@ -67,6 +67,9 @@ _gx026=" xen-tools-4.4-api-fix.patch"
 # Fix po file collision with app-emulation/qemu, while USE=qemu is enabled, Bug 508302
 _gx027=" xen-tools-4-qemu-fix-po-collision.patch"
 
+# Fix build failure with ncurses[tinfo], bug 526526
+_gx028=" xen-tools-4.4.1-tinfo.patch"
+
 # xen-tools-4.2.5 patches set
 _gpv_xen_tools_425_0="
 ${_gx001} ${_gx002} ${_gx003} ${_gx004} ${_gx005}
@@ -89,4 +92,12 @@ ${_gx007} ${_gx008} ${_gx009}
 ${_gx024} ${_gx021} ${_gx014}
 ${_gx022} ${_gx017} ${_gx025}
 ${_gx026} ${_gx027} ${_gx019}
+"
+
+_gpv_xen_tools_441_1="
+${_gx007} ${_gx008} ${_gx009}
+${_gx024} ${_gx021} ${_gx014}
+${_gx022} ${_gx017} ${_gx025}
+${_gx026} ${_gx027} ${_gx019}
+${_gx028}
 "
