@@ -6,13 +6,13 @@ AUX cfg-update-1.8.2-xxdiff-to-beediff.patch 2644 SHA256 e588a3ac4223f3f4f94deb0
 DIST cfg-update-1.8.7.tgz 163212 SHA256 94cdb032a187e6e9e5998852afa5999d6746d7b30ae9cae7c1b68c435fe19a7d SHA512 3f6d21918b46590b740898570337f2ae16881a1fef9ff3bc0e2064797e9385a088566788dcf8dc1962973bd2ccbaa725028640d4e65c714bb026389005c92c11 WHIRLPOOL f4aa24753ba8bc2c2c0a85ee474bc09c08379e852f468665e49416d646db455b2952327ae5e18f43f75c3c2e2ca456c33b2a9ae393332d682bfb9df58adbeadd
 DIST cfg-update-1.8.9.tgz 162356 SHA256 82d14b3cd7b1c144d7d77836919689471cd31c69cefba9b8714580e6cf1e495e SHA512 2c2d4d5cddaf1c5c8233bfde29b488d682e723da3e267756e203b4ea3c97f2f88615530002975ff07fb466eebed603e4ce227591a1b1e09ef3aca8c2eb17fcb9 WHIRLPOOL d17b179bc4589cc650178e981c0d5a6e336023f3128a9b76c1a4a19e0fe347982ff75d2337ed972e040fec1b93097b4336818b748f2af20eccb2e82f332417af
 EBUILD cfg-update-1.8.7.ebuild 3297 SHA256 09713eaa80452c816adc3fb9d328efd9e3764c3bcedf339d8dea16083977b54c SHA512 a1b3fb0f705d181c6c6c9703f11ecf0e07b2680cce5c87126af2b4cdbadeeffbc51d35643024dd56d81a33f0e7cd5e5c2dec26bb7cce70b74100f13054172bdf WHIRLPOOL 78fe7a6895610a91dae95a0ce081fd950bcc355a9074d96fcbce6e13c36dfe3a02b4279ced39c69240eeb080395ad8a06f350e175eb5151034030a73783cf008
-EBUILD cfg-update-1.8.9.ebuild 3197 SHA256 447698f49ccf9515a6713fcd11bfbac7f7183e5ccd7466c079a25bb2f76ba65e SHA512 8751928d872bb1141a7c9a86be6b2a95e9f25732c7e51cea0032a2d302c27f03e00f621c353aabc5c3231f138c908d52c3496d390a9b7e364bee2dace9579aaf WHIRLPOOL 0df3c8a388ed44009db58703118b4f456bb488d5fb5098e2f5f427716d89193e17bf2195450138f6f2a19ceb444c3cb6ea373788adcdf316fef960028ba7d78e
-MISC ChangeLog 5866 SHA256 e475644cdddc0a5f1fe01e1aa55d1ca01c526a2f3e33f792858bc0aa945dc945 SHA512 4f7046c98291c2b8f1faef049c391e6b6bd8caea139622f9d73871db0504e07e0bd667b0dae313c02c2e66cf31a043274210a46e4b6df03dbd01f71de02f87d5 WHIRLPOOL 62fe5e9f27712521087bcf0606be8f343d73d8811ff5ba92d498cd180d054708da868ecb2487e0dc218c11bd509fc725bf2a06462b4744a6ef25f91a88e30b4d
+EBUILD cfg-update-1.8.9.ebuild 3196 SHA256 063e53dc9fc66bb1059f64c8efcab5c0f13ec093c60f3527285e234ed542ac3a SHA512 7d430849d06297809ecf76f87971a433ebeabcb0df25de0ea034ea0c532ac0bb47034d80a6becb6a64e19e0c9e64f64f3a7fbb57f1a6d72497a6648587c6e53f WHIRLPOOL 6c23e98ca402aa16b8559a6d41b6ab240da7ef7c6eeb9cc62ad1097d5dcae550e425f0cbf659a57c97d8caf742de4e5d26a80c597c24e63d9f1f02a798ba5d36
+MISC ChangeLog 6019 SHA256 47bc3db677920e9c46c3bcf4ba19f14c2aae532c7ba4a19289427e7e783b19af SHA512 93ab64363014db49f665b0e4ac577884d87f84c1f15f50ba476d7de0dcb890614bf8a93b1cde123594ee7143ddcdaab62752adf889243e7c9169e4eef3d2e138 WHIRLPOOL 45879c27b761f6c03e66d46fffd6d9e3d1a524da2d726a21d37e946dffd46bb4d30951e7ea970d75bfa511ae920641ab5f2646b92d732e6c36d9b073fac2444f
 MISC metadata.xml 198 SHA256 51987068e1215c73a592a4dea6221f8ec1a36296d87f20c7fc6a46e0a272b04c SHA512 87318ce38f656dc4ca5b2090cf4b8d563d691c8a1c786a33e3ae6b2bca8daea41b10e154d8eeca8a3095f534245685a6078e6599064c6fe09f7d30de7e7fba3c WHIRLPOOL edfc641f9c1d10efe190bc306ed5f24e59d7e77cc6b1055b77e132c317f59d168543e4b8d535c0159dcf9c5f3b0ac827a7d1847d3eafa3e9c44f73106874482a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlQ7JI0ACgkQCMFw3lXsEjpXKAEAi7l36zb5+M+2+3eaFGzgaiB5
-KJpMPiKSgNv+04MLL80A/02cJKC+UJ6gBz74ZwXpbXl/GE49b2WVrpqsO6K4BLVo
-=vjCY
+iF4EAREIAAYFAlRU7nwACgkQCMFw3lXsEjoUggEAj5IkVi91BWJPCiG7aYKz59yc
+X0YVkrGIIgYve0PHQNkBAJ6001rthealbmOarhYI5xEW8fClULZCMSY05kW7ZDCE
+=HrF3
 -----END PGP SIGNATURE-----
