@@ -3,10 +3,10 @@ DESCRIPTION=Easy to use GUI & CLI alternative for etc-update with safe automatic
 EAPI=5
 HOMEPAGE=https://github.com/rich0/cfg-update
 IUSE=X
-KEYWORDS=amd64 ~arm ~ppc ~x86
+KEYWORDS=amd64 ~arm ~ppc x86
 LICENSE=GPL-2
 RDEPEND=X? ( >=x11-misc/sux-1.0 x11-apps/xhost ) dev-perl/TermReadKey
 SLOT=0
 SRC_URI=https://github.com/rich0/cfg-update/tarball/1.8.9 -> cfg-update-1.8.9.tgz
 _eclasses_=eutils	32548a82e42dc26e3312581476d2f20c	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac
-_md5_=1683cee6ff6da9b8e48d6c9b5da5817d
+_md5_=a0f979a2a76fb6929dd2fedcb59f1787
